[package]
name = "card-generator"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "thin"
strip = true

[dependencies]
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
xargo = false
image = "test-image"
runner = "custom-runner"
